# cstarter

./: CMakeLists.txt  README.md  main.c
core/: startertypes.h
maiden/: maiden.c  maiden.h
olivec/: olivec.c  olivec.h
player/: array.c  array.h  structure.c  structure.h
rust/: rust.c  rust.h
